--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,18 @@ jobs:
     - uses: cachix/install-nix-action@v22
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: nix build '.#nactl' --out-link nactl.pdf
-    - run: nix build '.#nactl-complete' --out-link nactl-complete.pdf
+    - name: Cache Nix
+      uses: actions/cache@v3.3.0
+      with:
+        key: ${{ hashfiles('flake.nix') }}
+        path: ~/nix
+    - run: nix --store ~/nix build '.#nactl' --out-link nactl.pdf
+    - run: nix --store ~/nix build '.#kactl' --out-link kactl.pdf
+    - run: nix --store ~/nix build '.#nactl-complete' --out-link nactl-complete.pdf
     - uses: actions/upload-artifact@v3
       with:
-        name: nactl.pdf
-        path: nactl.pdf
-    - uses: actions/upload-artifact@v3
-      with:
-        name: nactl-complete.pdf
-        path: nactl-complete.pdf
+        name: PDFs
+        path: |
+          nactl.pdf
+          kactl.pdf
+          nactl-complete.pdf
