--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,17 @@ jobs:
     - uses: cachix/install-nix-action@v22
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
-        extra_nix_config: "store = /home/runner/nix"
+        extra_nix_config: |
+          store = /home/runner/nix
+          auto-optimise-store = true
+          keep-outputs = true
+          keep-derivations = true
     - name: Cache Nix
       uses: actions/cache@v3.3.0
       with:
         key: ${{ hashfiles('flake.nix') }}
         path: ~/nix
+    # See https://github.com/actions/cache/issues/749#issuecomment-1551707934
     - run: nix build '.#nactl'
     - run: cp /home/runner/nix$(realpath result) nactl.pdf
     - run: nix build '.#kactl'
